	PR tree-optimize/48929 	* gcc.c-torture/compile/pr48929.c: New testcase. 	* ipa-inline-analysis.c (remap_edge_predicates): Fix handling 	of empty predicate.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@174638 138bc75d-0d04-0410-961f-82ee72b054a4